--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
     "lenis": "^1.3.11",
     "lucide-react": "^0.462.0",
+    "motion": "^12.23.24",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
